--- a/main/sidenavHead.html
+++ b/main/sidenavHead.html
@@ -9,7 +9,8 @@
 <script src="js\calculadora.js"></script>
 <script src="js\desenho.js"></script>
 <script src="js\math\fatoracao.js"></script>
-<script src="js\math\*"></script>
+<script src="js\math\bhaskara.js"></script>
+<script src="js\math\areas2d.js"></script>
 
 <!-- coisa do desenho -->
 
