--- a/teste/index.html
+++ b/teste/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pesquisa Responsiva</title>
+    <title>TESTE</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="search-container">
+    <div class="search-container absolute">
         <input type="text" id="search-input" placeholder="Digite sua pesquisa">
     </div>
-    <div class="results-container">
+    <div class="results-container absolute">
         <ul id="results-list"></ul>
     </div>
 
