wow searchbar eta em prototipo

--- a/main/sidenavHead.html
+++ b/main/sidenavHead.html
@@ -2,6 +2,9 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link rel="stylesheet" type="text/css" href="css/sidenav.css">
+<link rel="stylesheet" type="text/css" href="css/index.css">
+<link rel="stylesheet" type="text/css" href="css/capsules.css">
+<link rel="stylesheet" type="text/css" href="css/pesquisa.css">
 
 
 <!-- links para a sidenav & fatoracao-->
@@ -11,9 +14,13 @@
 <script src="js\math\fatoracao.js"></script>
 <script src="js\math\bhaskara.js"></script>
 <script src="js\math\areas2d.js"></script>
+<script src="./js/math/hipotenusa.js"></script>
+<script src="./js/math/perimetro.js"></script>
+<script src="./js/math/areas2d.js"></script>
 
-<!-- coisa do desenho -->
-
+<!-- coisa das janelas/capsulas -->
+<script src="js\capsules.js"></script>
+<script src="js\pesquisa.js"></script>
 
 
 <!-- coisa da calculadora -->
@@ -27,17 +34,11 @@
     var openCal = 0;
     var openDra = 0;
     var openExt = 0;
-</script>
-
-<script lang="JavaScript">
     var MathDeg = '(Math.PI/180)*';
     var sin = 'Sin(';
     var cos = 'Cos(';
     var tan = 'Tan(';
     var log = 'Log(';
-</script>
-
-<script>
     function TriggeredKey(e){
         var keycode;
             if (window.event.keyCode == 13) {
@@ -47,17 +48,3 @@
             };
     }
 </script>
-
-<!-- <script>
-window.addEventListener("keydown", function(event) {
-    if (event.code == "Enter"){
-        console.log("key code = "+event.code);
-    }
-
-
-    //como fazer Ctrl+Z
-    if(event.code == "KeyZ" && event.ctrlKey == true){
-        console.log("Ctrl+z funcionando");
-    }
-}, true);
-</script> -->
