--- a/teste/index.html
+++ b/teste/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="search-container absolute">
+    <div class="searchBar absolute">
         <input type="text" id="search-input" placeholder="Digite sua pesquisa">
     </div>
-    <div class="results-container absolute">
-        <ul id="results-list"></ul>
+    <div class="pesquisa absolute">
+        <ul id="lista"></ul>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
