--- a/main/sidenavHead.html
+++ b/main/sidenavHead.html
@@ -18,11 +18,13 @@
 <script src="js\math\areas2d.js"></script>
 <script src="./js/math/hipotenusa.js"></script>
 <script src="./js/math/perimetro.js"></script>
-<script src="./js/math/areas2d.js"></script>
+<script src="./js/math/volumes.js"></script>
 
 <!-- coisa das janelas/capsulas -->
 <script src="js\capsules.js"></script>
 <script src="js\pesquisa.js"></script>
+<script src="js\data.js"></script>
+<script src="js\background.js"></script>
 
 
 <!-- coisa da calculadora -->
