Add formulas, btn mandar des p tela, arr b pesq

--- a/main/sidenavHead.html
+++ b/main/sidenavHead.html
@@ -19,6 +19,7 @@
 <script src="./js/math/hipotenusa.js"></script>
 <script src="./js/math/perimetro.js"></script>
 <script src="./js/math/volumes.js"></script>
+<script src="./js/math/modificadores.js"></script>
 
 <!-- coisa das janelas/capsulas -->
 <script src="js\capsules.js"></script>
