--- a/main/sidenav.html
+++ b/main/sidenav.html
@@ -17,8 +17,8 @@
                             }" autocomplete="off">
                         <input type="text" id="preAns" name="preAns" value="" autocomplete="off" disabled> <!-- caixa de texto da pergunta caso precise: disabled-->
                     </form>
-                    <p class="noCopy" id="switch2" style="font-size: xx-large; color: var(--WhiteGray); padding-left: 3%; top: 0%; position:absolute">DEG</p>
-                    <p class="noCopy" style="font-size: xx-large; color: var(--WhiteGray); cursor: pointer; position:absolute; top:0%; right:3%;" onmousedown="document.calculator.ans.value=''; document.calculator.preAns.value=''; i = 0; f = 0; ">CE</p>
+                    <p class="noCopy" id="switch2" style="font-size: xx-large; color: var(--LightGray); padding-left: 3%; top: 0%; position:absolute">DEG</p>
+                    <p class="noCopy" style="font-size: xx-large; color: var(--LightGray); cursor: pointer; position:absolute; top:0%; right:3%;" onmousedown="document.calculator.ans.value=''; document.calculator.preAns.value=''; i = 0; f = 0; ">CE</p>
                 </div>
                 <!-- div dos numeros -->
                 <div class="grid-container" style="grid-template-columns: auto auto auto; background-color:var(--RealDarkBlue); top:30%; height:70%; width:70%; position: absolute; border-bottom-left-radius: 15px;">
@@ -133,7 +133,7 @@
         <div id="myDraw" class="sidenavDraw base" style="z-index: 9995; height: 100vh; max-height: 100vh; width: 70%; left: -70%; border-top-right-radius: 25px; border-bottom-right-radius: 25px;">
             <!-- menu para configuraçoes da caneta -->
             <!-- div de canetas de desenho -->
-            <div class="shadow" style="background-color:var(--WhiteGray); height:90vh; width:20vw; left: -8%; top: 5vh; border: 5px; border-radius: 15px; position: absolute; overflow: hidden;">
+            <div class="shadow" style="background-color:var(--LightGray); height:90vh; width:20vw; left: -8%; top: 5vh; border: 5px; border-radius: 15px; position: absolute; overflow: hidden;">
                 <!-- div eraser -->
                 <div>
                     <!-- empty -->
