--- a/main/sidenavHead.html
+++ b/main/sidenavHead.html
@@ -10,6 +10,7 @@
 
 
 <!-- links para a sidenav & fatoracao-->
+<script src="js\mudaTema.js"></script>
 <script src="js\sidenav.js"></script>
 <script src="js\calculadora.js"></script>
 <script src="js\desenho.js"></script>
