seta agr altera input (mas nao atualiza a função

--- a/main/footer.html
+++ b/main/footer.html
@@ -1,16 +1,16 @@
 <div id="contato">
     <p>Otavio custódio Zampar</p>
-    <p style="margin:0; top:10px;">CONTATO</p>
-    <p style="margin:0; top:10px;">AAA</p>
-    <p style="margin:0; top:10px;">tavicozampar@gmail.com</p>
-    <p style="margin:0; top:10px;">otavio.zampar@fatec.sp.gov.br</p>
+    <p class="contato">CONTATO</p>
+    <p class="contato">AAA</p>
+    <p class="contato">tavicozampar@gmail.com</p>
+    <p class="contato">otavio.zampar@fatec.sp.gov.br</p>
     <div>
     <a href="" target="_blank" rel="noopener"><img src=""></a>
     <!-- <a href="http://www.twitter.com/tavicozampar" target="_blank" rel="noopener"><img src="../src/TwitterLogoBlue.svg" style="height: auto; width: 25px;"></a>
     <a href="https://www.linkedin.com/in/ot%C3%A1vio-cust%C3%B3dio-zampar-0907561bb" target="_blank" rel="noopener"><img src="../src/LI-In-Bug.png" style="height: auto; width: 25px;"></a> -->
     <a href="" target="_blank" rel="noopener"><img src=""></a>
     </div>
-    <p style="margin:0;top:10px; width:400;">© Otavio Zampar</p>
+    <p style="width:400px;" class="contato">© Otavio Zampar</p>
     <br>
 
     <!--Bootstrap JS-->
