substitui http por https

--- a/main/sidenavCalculadora.html
+++ b/main/sidenavCalculadora.html
@@ -1,5 +1,5 @@
 <div class="rounded-pill base pill" id="btnMyCalc" style="top: 45vh; background-color: var(--BaseColor);" onmousedown='openCalc()'>
-    <svg xmlns="http://www.w3.org/2000/svg" id="btnCalc" width="16" height="16" fill="var(--AccentColor)" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
+    <svg xmlns="https://www.w3.org/2000/svg" id="btnCalc" width="16" height="16" fill="var(--AccentColor)" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
     </svg>
 </div>
@@ -79,7 +79,7 @@
         <div id="corner" style="background-color:var(--AccentColor); top: 95%; left: 95%; height: 5%; width: 5.1%; position: absolute; z-index: 9999; border-bottom-right-radius: 15px; cursor: pointer;" onmousedown="if(openExt == 0){openExtra();}"></div>
         <div id="myExtra" style="background-color:var(--AccentColor); top:30%; left: 95%; height:70%; width:70%; position: absolute; transition: 0.5s; z-index: 9997;">
             <div style="height: 100%; height: 100%; width: 10%; cursor: pointer;" onmousedown="openExtra()">
-                <svg id="rotate" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="var(--RealDarkBlue)" class="bi bi-chevron-compact-left" viewBox="0 0 16 16" style="width:100%; margin-top:30vh; pointer-events:none;">
+                <svg id="rotate" xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="var(--RealDarkBlue)" class="bi bi-chevron-compact-left" viewBox="0 0 16 16" style="width:100%; margin-top:30vh; pointer-events:none;">
                     <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
                 </svg>
             </div>
