--- a/main/sidenavHead.html
+++ b/main/sidenavHead.html
@@ -1,31 +1,31 @@
 <!--Link bootstrap, jquery & CSS-->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-<link rel="stylesheet" type="text/css" href="css/main.css">
-<link rel="stylesheet" type="text/css" href="css/sidenav.css">
-<link rel="stylesheet" type="text/css" href="css/index.css">
-<link rel="stylesheet" type="text/css" href="css/capsules.css">
-<link rel="stylesheet" type="text/css" href="css/pesquisa.css">
+<link rel="stylesheet" type="text/css" href="CSS/main.css">
+<link rel="stylesheet" type="text/css" href="CSS/sidenav.css">
+<link rel="stylesheet" type="text/css" href="CSS/index.css">
+<link rel="stylesheet" type="text/css" href="CSS/capsules.css">
+<link rel="stylesheet" type="text/css" href="CSS/pesquisa.css">
 
 
 <!-- links para a sidenav & fatoracao-->
-<script src="./js/mudaTema.js"></script>
-<script src="./js/sidenav.js"></script>
-<script src="./js/calculadora.js"></script>
-<script src="./js/desenho.js"></script>
-<script src="./js/math/fatoracao.js"></script>
-<script src="./js/math/bhaskara.js"></script>
-<script src="./js/math/areas2d.js"></script>
-<script src="./js/math/hipotenusa.js"></script>
-<script src="./js/math/perimetro.js"></script>
-<script src="./js/math/volumes.js"></script>
-<script src="./js/math/modificadores.js"></script>
+<script src="./JS/mudaTema.js"></script>
+<script src="./JS/sidenav.js"></script>
+<script src="./JS/calculadora.js"></script>
+<script src="./JS/desenho.js"></script>
+<script src="./JS/math/fatoracao.js"></script>
+<script src="./JS/math/bhaskara.js"></script>
+<script src="./JS/math/areas2d.js"></script>
+<script src="./JS/math/hipotenusa.js"></script>
+<script src="./JS/math/perimetro.js"></script>
+<script src="./JS/math/volumes.js"></script>
+<script src="./JS/math/modificadores.js"></script>
 
 <!-- coisa das janelas/capsulas -->
-<script src="./js/capsules.js"></script>
-<script src="./js/pesquisa.js"></script>
-<script src="./js/data.js"></script>
-<script src="./js/background.js"></script>
+<script src="./JS/capsules.js"></script>
+<script src="./JS/pesquisa.js"></script>
+<script src="./JS/data.js"></script>
+<script src="./JS/background.js"></script>
 
 
 <!-- coisa da calculadora -->
