aa acabou o tempo (tava mexendo nas setas)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 
     <!-- links para a sidenav & fatoracao-->
+    <script src="./JS/checkTouch.js"></script>
     <script src="./JS/mudaTema.js"></script>
     <script src="./JS/sidenav.js"></script>
     <script src="./JS/calculadora.js"></script>
