--- a/aa.html
+++ b/aa.html
@@ -20,7 +20,7 @@
   <div class="square comparison-square" style="left: 400px;"></div>
   <div class="square comparison-square" style="left: 600px;"></div>
 
-	<svg id="svgContainer" width="100%" height="100%" xmlns="https://www.w3.org/2000/svg">
+	<svg id="svgContainer" width="100%" height="100%" style="min-height: 1rem;" xmlns="https://www.w3.org/2000/svg">
         <line id="line" class="line" x1="0" y1="0" x2="0" y2="0"/>
     </svg>
 
