ingles language when? NOW

--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
     <!-- coisa das janelas/capsulas -->
     <script src="./JS/capsules.js"></script>
     <script src="./JS/pesquisa.js"></script>
-    <script src="./JS/data.js"></script>
     <script src="./JS/background.js"></script>
+
+    <!-- hey, muda esse negocio para instantâneamente colocar as fórmulas em inglês -->
+    <!-- <script src="./JS/data/dataPt-Br.js"></script> -->
+    <script src="./JS/data/dataEn-Us.js"></script>
+    
 
 
     <!-- coisa da calculadora -->
