calculadora funciona em mobile

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
             </svg>
         </div>
-        <div id="myDraw" class="sidenavDraw base" style="z-index: 9995; height: 100vh; max-height: 100vh; width: 70%; left: -70%; border-top-right-radius: 25px; border-bottom-right-radius: 25px; overflow-y: hidden;">
+        <div id="myDraw" class="sidenavDraw base" style="z-index: 9995; height: 100vh; max-height: 100vh; width: max(70%, 20rem); left: min(-70%, -20rem); border-top-right-radius: 25px; border-bottom-right-radius: 25px; overflow-y: hidden;">
             <!-- menu para configuraçoes da caneta -->
             <!-- div de canetas de desenho -->
             <div class="shadow" id="caneta">
