--- a/main/sidenavCalculadora.html
+++ b/main/sidenavCalculadora.html
@@ -3,7 +3,7 @@
         <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
     </svg>
 </div>
-<div id="myCalc" class="sidenavCalc base" style="z-index: 9995; height: 100%; width: 40%; left: -40%; border-top-right-radius: 25px; border-bottom-right-radius: 25px;">
+<div id="myCalc" class="sidenavCalc base" style="z-index: 9995; height: 100%; width: max(40vw, min(100vh, 40rem)); left: min(-40vw, max(-100vh, -40rem)); border-top-right-radius: 25px; border-bottom-right-radius: 25px;">
     <div class="shadow" style="height:94%; top: 3%; width:90%; margin-left: 5%; border-radius: 15px; position: absolute;">
         <!-- div de resposta -->
         <div style="background-color:var(--SecondAccentColor); height:30%; width:100%; position: absolute; border-top-left-radius: 15px; border-top-right-radius: 15px;">
