--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <script src="./JS/background.js"></script>
 
     <!-- hey, muda esse negocio para instantâneamente colocar as fórmulas em inglês -->
-    <!-- <script src="./JS/data/dataPt-Br.js"></script> -->
-    <script src="./JS/data/dataEn-Us.js"></script>
+    <script src="./JS/data/dataPt-Br.js"></script>
+    <!-- <script src="./JS/data/dataEn-Us.js"></script> -->
     
 
 
